--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 }
 
 body {
+    margin: 0;
+    
     background: linear-gradient(rgb(10, 11, 49), rgb(151, 104, 112));
     background-repeat: no-repeat;
     height: 100vh;
@@ -14,6 +16,19 @@ body {
     align-items: center;
     overflow: hidden;
     font-family: sans-serif;
+    position: relative;
+}
+.loading-anime{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background: #000000c9;
+
+    display: none;
+
+    justify-content: center;
+    align-items: center;
 }
 
 img {
@@ -46,29 +61,42 @@ img {
     display: flex;
     /* justify-content: space-evenly; */
     padding-left: 130px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     align-items: center;
-    margin-top: 70px;
+    margin-top: 20px;
     color: #ffff;
 
-    border: 2px solid red;
-}
+    background: #00000063;
 
+}
+.row2{
+    display: flex;
+    color: #fff;
+    /* justify-content: space-around; */
+    background: #000000b7;
+    padding: 20px 0 20px 130px;
+}
+.day{
+    font-size: 2rem;
+    margin: 0;
+}
+.condition-text{
+    font-size: 2rem;
+    margin: 0;
+    margin-left: 335px;
+}
 .date {
     font-size: 8rem;
     margin: 0;
 }
 
-.date {
-    border: 2px solid green;
-}
 
 .temp-div {
-    border: 2px solid rgb(217, 255, 0);
     margin-left: 200px;
 }
 
 .temp {
-    border: 2px solid;
     font-size: 6rem;
     text-align: left;
     margin: 0 0 20px 0;
@@ -89,7 +117,7 @@ img {
     margin: 0 0 0 100px;
     text-align: center;
 
-    background: #fff;
+    background: #ffffff;
     color: #000;
     border-radius: 50%;
     height: 3rem;
@@ -99,14 +127,47 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+    0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
 .switch-temp:hover,
 .switch-temp:focus{
     cursor: pointer;
     opacity: .9;
+    transform: scale(1.1);
 }
 .title{ 
     color: #fff;
     letter-spacing: 2px;
+}
+
+.city-input-div{
+    margin-top:70px;
+}
+#city-input{
+    font-size: 1.5rem;
+    padding: .2em;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+}
+.error-div{
+    color: #ff0000;
+}
+
+.submit-btn{
+    background: rgb(163, 17, 102);
+    color: #fff;
+    padding: .2em;
+    font-size: 1.5rem;
+    margin-left: 10px;
+    border-radius: 10px;
+    box-shadow: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+    0.125em 0.125em 0.25em rgba(0,0,0,.15);
+}
+.submit-btn:hover,
+.submit-btn:focus{
+    cursor: pointer;
+    opacity: .9;
 }
 
