--- a/styles.css
+++ b/styles.css
@@ -42,13 +42,13 @@ img {
     width: 50%;
     border-radius: 20px;
     position: relative;
-    height: 70vh;
+    height: 70vh
 }
 
 .giphy {
     position: absolute;
     top: -10%;
-    right: -10px;
+    right: -50px;
     width: 250px;
 }
 
@@ -81,19 +81,19 @@ img {
 }
 
 .day {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0;
 }
 
 .condition-text {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0 50px 0 0;
     margin-left: 400px;
     text-align: center;
 }
 
 .date {
-    font-size: 8rem;
+    font-size: 7rem;
     margin: 0;
 }
 
@@ -103,7 +103,7 @@ img {
 }
 
 .temp {
-    font-size: 6rem;
+    font-size: 5rem;
     text-align: left;
     margin: 0 0 20px 0;
 }
@@ -115,20 +115,20 @@ img {
 
 .city-name {
     margin: 0;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 .switch-temp {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0 0 0 100px;
     text-align: center;
 
     background: #ffffff;
     color: #000;
     border-radius: 50%;
-    height: 3rem;
-    width: 3rem;
-    padding: .2em;
+    height: 2.5rem;
+    width: 2.5rem;
+    padding: .1em;
 
     display: flex;
     align-items: center;
@@ -154,7 +154,7 @@ img {
 }
 
 #city-input {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     padding: .2em;
     border-radius: 10px;
     outline: none;
@@ -168,9 +168,9 @@ img {
 .submit-btn {
     background: rgb(163, 17, 102);
     color: #fff;
-    padding: .2em;
-    font-size: 1.5rem;
-    margin-left: 10px;
+    padding: .4em;
+    font-size: 1rem;
+    margin-left: 20px;
     border-radius: 10px;
     box-shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
         0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
