--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
     background: linear-gradient(rgb(10, 11, 49), rgb(151, 104, 112));
     background-repeat: no-repeat;
     height: 100vh;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,13 +17,13 @@ body {
     font-family: sans-serif;
     position: relative;
 }
-.loading-anime{
+
+.loading-anime {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 100;
     background: #000000c9;
-
     display: none;
 
     justify-content: center;
@@ -55,12 +54,14 @@ img {
 
 .giphy img {
     border-radius: 50%;
+    width: 250px;
+    height: 250px;
 }
 
 .row1 {
     display: flex;
     /* justify-content: space-evenly; */
-    padding-left: 130px;
+    padding-left: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
     align-items: center;
@@ -70,22 +71,27 @@ img {
     background: #00000063;
 
 }
-.row2{
+
+.row2 {
     display: flex;
     color: #fff;
     /* justify-content: space-around; */
     background: #000000b7;
-    padding: 20px 0 20px 130px;
+    padding: 20px 0 20px 70px;
 }
-.day{
+
+.day {
     font-size: 2rem;
     margin: 0;
 }
-.condition-text{
+
+.condition-text {
     font-size: 2rem;
-    margin: 0;
-    margin-left: 335px;
+    margin: 0 50px 0 0;
+    margin-left: 400px;
+    text-align: center;
 }
+
 .date {
     font-size: 8rem;
     margin: 0;
@@ -93,7 +99,7 @@ img {
 
 
 .temp-div {
-    margin-left: 200px;
+    margin-left: 150px;
 }
 
 .temp {
@@ -127,47 +133,51 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
-    0.125em 0.125em 0.25em rgba(0,0,0,.15);
+    box-shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
+        0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
 }
+
 .switch-temp:hover,
-.switch-temp:focus{
+.switch-temp:focus {
     cursor: pointer;
     opacity: .9;
     transform: scale(1.1);
 }
-.title{ 
+
+.title {
     color: #fff;
     letter-spacing: 2px;
 }
 
-.city-input-div{
-    margin-top:70px;
+.city-input-div {
+    margin-top: 70px;
 }
-#city-input{
+
+#city-input {
     font-size: 1.5rem;
     padding: .2em;
     border-radius: 10px;
     outline: none;
     border: none;
 }
-.error-div{
+
+.error-div {
     color: #ff0000;
 }
 
-.submit-btn{
+.submit-btn {
     background: rgb(163, 17, 102);
     color: #fff;
     padding: .2em;
     font-size: 1.5rem;
     margin-left: 10px;
     border-radius: 10px;
-    box-shadow: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
-    0.125em 0.125em 0.25em rgba(0,0,0,.15);
+    box-shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
+        0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
 }
+
 .submit-btn:hover,
-.submit-btn:focus{
+.submit-btn:focus {
     cursor: pointer;
     opacity: .9;
 }
-
